feat: implement update me route
